V.1.0.1 Ajustes OrdenRecargaPrepagoRepository: 1-Inclusión de instrucción SaveChanges de modelo EntityFramework entre cada llamada al servicio addbatch 2-Inclusión de 2 seg adicionales de espera entre cada llamada al servicio addbatch 3-Se corrige el guardado de la fecha de procesamiento de la orden 4-Apliación del campo para cardsresponse 5-Inclusión de mensajeria de error en llamada al servicio addbatch en campo cardsresponse 6-Inclusión del batchid en el campo cardsresponse para llamadas al servicio addbatch exitosas
Ajustes a AfiliadoSumaRepository:
1-Se corrige el guardado del track2, cvv2 y la fecha_creacion al Aprobar

Ajustes a vistas ClientePrepago->DetalleOrden,  OrdenRecargaPrepago->DetalleOrden y OrdenRecargaPrepago->CreateOrden para falla en el manejo del indicadorGuardar y validación de submit.

--- a/Suma2Lealtad/Views/ClientePrepago/DetalleOrden.cshtml
+++ b/Suma2Lealtad/Views/ClientePrepago/DetalleOrden.cshtml
@@ -24,7 +24,14 @@
     string indicadorGuardar;
     if (Session["RoleLevel"].ToString() == "3")
     {
-        indicadorGuardar = "Aprobar";
+        if (Model.First().statusOrden == "Nueva")
+        {
+            indicadorGuardar = "Aprobar";
+        }
+        else
+        {
+            indicadorGuardar = "Guardar";
+        }
     }
     else
     {
