--- a/Suma2Lealtad/Views/OrdenRecargaPrepago/Create.cshtml
+++ b/Suma2Lealtad/Views/OrdenRecargaPrepago/Create.cshtml
@@ -264,7 +264,7 @@
             alert("Debe incluir al menos un benficiario de recarga.");
             return false;
         }
-        return false;
+        return true;
     }
 </script>
 
