V.1.0.2 Ajustes OrdenRecargaPrepagoRepository: 1-Se modifica el algoritmo del metodo Recargar, antes de llamar al servicio addbatch se llama al servicio getclient. Esta secuencia se intenta un máximo de 3 veces antes de retornar con falla. 2-Se eliminan los 2 seg adicionales de espera entre cada llamada al servicio addbatch (metodo ProcesarOrden)
Ajustes a vistas AfiliadoSuma->Index,  AfiliadoSuma->SaldosMovimientos para manejo del indicadorMostrar para la sección d de Movimientos de cuentas.

--- a/Suma2Lealtad/Views/AfiliadoSuma/Index.cshtml
+++ b/Suma2Lealtad/Views/AfiliadoSuma/Index.cshtml
@@ -20,6 +20,20 @@
     }
 </style>
 
+@{
+    string indicadorMostrar;
+    if (Session["RoleLevel"].ToString() == "1")
+    {
+        indicadorMostrar = "Ocultar";
+    }
+    else
+    {
+        indicadorMostrar = "Mostrar";
+    }
+}
+
+
+
 @*<form id="commentForm" method="post" action="@Url.Action("Index", "Afiliado")" class="form-horizontal">*@
 <div class="form-group">
 
@@ -114,7 +128,14 @@
                     <a id="BloquearTarjeta" class="btn btn-success btn-md" role="button">Bloquear Tarjeta</a>
                     <a id="SuspenderTarjeta" class="btn btn-success btn-md" role="button">Suspender Tarjeta</a>
                     <a id="ReactivarTarjeta" class="btn btn-success btn-md" role="button">Reactivar Tarjeta</a>
-                    <a id="SaldosMovimientos" class="btn btn-success btn-md" role="button">Saldos y Movimientos</a>
+                     @{ if (indicadorMostrar == "Mostrar")
+                     {
+                        @:<a id="SaldosMovimientos" class="btn btn-success btn-md" role="button">Saldos y Movimientos</a>
+                     }
+                     else{
+                        @:<a id="SaldosMovimientos" class="btn btn-success btn-md" role="button">Saldos</a>
+                     }
+                     }
                     <a id="Acreditar" class="btn btn-success btn-md" role="button">Acreditar</a>
                 </div>
                 <div class="pull-right">
